@@ -3,6 +3,9 @@
 - TW-1578 Bash tab completion problems on first run
           (thanks to Renato Alves and Ptolemarch).
 - TW-1580 "modified" attribute no longer updated (thanks to David Patrick).
+- TW-1581 Tasks with dependencies show wrong urgency values for the first
+  report run after a task in the dependency chain is completed/deleted (thanks
+  to Ulf Eliasson).
 - Setting 'bulk' to zero is interpreted as infinity, which means there is no
   amount of changes that is considered dangerous (thanks to Tomas Babej).
 
